# energy2020-compression

decision-tree/: scil_decision_tree.py  variables_echam.csv  variables_ecoham.csv
scil/: .atom-build.json  .gitignore  .travis.yml  README.md  configure
scil/dev/: create-datatype-variants.py  header.txt  refactor-full.sh  scil.conf  scil.pc.in  symbols-create.sh
scil/dev/bench/: algo1.csv  memcpy.csv  plot.py
scil/doc/: Todo.txt  benchmark-metrics.txt  compressed-buffer-layout.txt  create-compression-context-flowchart-explaination.txt  create-compression-context-flowchart.dot  default-compression-params-flowchart.dot  notizen.txt  ratios.csv
scil/doc/Abschlusspräsentation/: literatur.bib  praesentation.tex
scil/doc/Ausarbeitung/: Report.lof  Report.lol  Report.lot  Report.tex  Report_notes.txt  literatur.bib
scil/doc/Ausarbeitung/Vorlage/: bericht.tex
scil/doc/Präsentation/: abs_comp_eng.tex  abs_comp_ger.tex  beamerthemeHamburg.sty  literatur.bib  seminarvortrag.tex
scil/doc/Zwischenpräsentation/: 3schaare-schaare-scil_inter-presentation.tex  literatur.bib
scil/src/: CMakeLists.txt  Doxyfile.in  scil-config.h.in  symbols.map
scil/src/base/: CMakeLists.txt  scil-datatypes.c  scil-datatypes.h  scil-dims.c  scil-dims.h  scil-error.c  scil-error.h  scil-user-hints.c  scil-user-hints.h
scil/src/compression/: CMakeLists.txt  scil-algo-chooser.c  scil-algo-chooser.h  scil-compression-chain.c  scil-compression-chain.h  scil-compressor.c  scil-compressor.h  scil-context-impl.h  scil-context.c  scil-context.h  scil-data-characteristics.c  scil-data-characteristics.h  scil-decision-tree.c  scil-decision-tree.h  scil-dtypes-functions-int.dtype.h  scil-dtypes-functions.dtype.h  scil.c  scil.h
scil/src/compression/algo/: algo-abstol.dtype.c  algo-abstol.dtype.h  algo-allquant.dtype.c  algo-allquant.dtype.h  algo-fpzip.dtype.c  algo-fpzip.dtype.h  algo-gzip.c  algo-gzip.h  algo-memcopy.c  algo-memcopy.h  algo-quantize.dtype.c  algo-quantize.dtype.h  algo-sigbits.dtype.c  algo-sigbits.dtype.h  algo-swage.dtype.c  algo-swage.dtype.h  algo-sz.dtype.c  algo-sz.dtype.h  algo-wavelets.dtype.c  algo-wavelets.dtype.h  algo-zfp-abstol.dtype.c  algo-zfp-abstol.dtype.h  algo-zfp-precision.dtype.c  algo-zfp-precision.dtype.h  blosc.c  blosc.h  huffman.c  huffman.h  lz4fast.c  lz4fast.h  precond-delta.dtype.c  precond-delta.dtype.h  precond-dummy.dtype.c  precond-dummy.dtype.h  precond-fp-delta.dtype.c  precond-fp-delta.dtype.h  scil-algorithm-impl.h  zstd-11.c  zstd-11.h  zstd-22.c  (+3 more)
scil/src/compression/algo/util/: scil-quantizer-int.dtype.c  scil-quantizer.dtype.c  scil-quantizer.dtype.h  scil-swager.c  scil-swager.h
scil/src/compression/test/: CMakeLists.txt  abstol-boundary-error.c  abstol-testing.c  abstol.c  allquant-copy.sh  allquant_double.c  allquant_float.c  bit-mapping.c  compression-chain.c  compression.c  huffman.c  precision-set.c  quantize-algo.c  quantize.c  reltol-extreme-values-double.c  reltol-finest-testing.c  reltol-finest.c  reltol.c  set-precision.c  sigbits-extreme-values-double.c  sigbits-extreme-values-float.c  sigbits-known-values-double.c  sigbits-known-values-float.c  sigbits.c  simple.c  swage.c  sz.c  user-hints-load.c  user-hints.cfg  wavelets.c  zlib.c
scil/src/pattern/: CMakeLists.txt  basic-mutators.c  basic-mutators.h  basic-patterns.c  basic-patterns.h  scil-pattern-internal.h  scil-patterns.c  scil-patterns.h  simplex-noise.c  simplex-noise.h
scil/src/test/: CMakeLists.txt  abstol-too-precise-double.c  abstol-too-precise-float.c  correctness.c  datatypes.c  sigbits-too-precise-double.c  sigbits-too-precise-float.c
scil/src/tools/: CMakeLists.txt  scil-add-noise.c  scil-benchmark.c  scil-compress.c  scil-generate-chooser-data.c  scil-generate-chooser-data2.c  scil-pattern-creator.c  scil-plot-csv-alt.py  scil-plot-csv.R  scil-plot-csv.py
scil/src/tools/util/: CMakeLists.txt  scil-option.c  scil-option.h
scil/src/tools/util/file-formats/: file-bin.c  file-bin.h  file-brick-of-floats.c  file-brick-of-floats.h  file-csv.c  file-csv.h  file-netcdf.c  file-netcdf.h  scil-file-format-impl.h  scil-file-format.c  scil-file-format.h
scil/src/util/: CMakeLists.txt  scil-debug.h  scil-dict.c  scil-dict.h  scil-hardware-limits.c  scil-hardware-limits.h  scil-util-types.dtype.c  scil-util-types.dtype.h  scil-util.c  scil-util.h
scil/src/util/test/: CMakeLists.txt  dict.c  nd-iter.c  pack.c  precision.c
scil/test-docker/: prepare.sh  run-all-tests.sh  run-machine-test.sh  run-travis.sh
scil/test-docker/archlinux/: Dockerfile
scil/test-docker/centos6/: Dockerfile
scil/test-docker/centos7/: Dockerfile
scil/test-docker/machine-tests/: centos7  ubuntu14.04  ubuntu17.04
scil/test-docker/ubuntu14.04/: Dockerfile
scil/test-docker/ubuntu16.04/: Dockerfile
scil/test-docker/ubuntu17.04/: Dockerfile
scil/tools/hdf5-plugin/: CMakeLists.txt  compile.sh  configure  prepare-dev.sh  scil-hdf5-plugin.h  scil-plugin.c
scil/tools/hdf5-plugin/fortran/: compile-fortran.sh  scil-fortran-interface.c  scil-mod.f90  test.f90
scil/tools/hdf5-plugin/test/: CMakeLists.txt  hdf5-library-loader.c  hints-read.c  hints-set.c  simple.c
scil/tools/netcdf4-patches/: 0001-Patch-for-NetCDF-with-SCIL.patch  0002-Flexible-read-information-from-file.patch  install.sh  test-netcdf4.c
